[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "21.7.7" # "22.0.0-rc.3.2"
soroban-fixed-point-math = { path = "./ext/soroban-fixed-point-math" }
tiny-keccak = { version = "2.0.2" }
hex = "0.4.3"
ed25519-dalek = { version = "1.0.1" }
stellar-strkey = { version = "0.0.11" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
