[package]
name = "reactor"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }
hex = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
