[package]
name = "reactor"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
tiny-keccak = { workspace = true, features = ["keccak"] }
hex = { workspace = true }
stellar-strkey = { workspace = true }
ed25519-dalek = { workspace = true }
